--- a/plen_ros/package.xml
+++ b/plen_ros/package.xml
@@ -49,12 +49,25 @@
   <!-- Use doc_depend for packages you need only for building documentation: -->
   <!--   <doc_depend>doxygen</doc_depend> -->
   <buildtool_depend>catkin</buildtool_depend>
-  <build_depend>gazebo_ros</build_depend>
+  
   <build_depend>rospy</build_depend>
-  <build_export_depend>gazebo_ros</build_export_depend>
+  <build_depend>std_msgs</build_depend>
+
+  <build_depend>python-catkin-pkg</build_depend>
+  <build_depend>message_generation</build_depend> 
+  
   <build_export_depend>rospy</build_export_depend>
-  <exec_depend>gazebo_ros</exec_depend>
+  
   <exec_depend>rospy</exec_depend>
+  <exec_depend>message_runtime</exec_depend>
+
+  <exec_depend>gazebo_msgs</exec_depend>
+  <exec_depend>std_msgs</exec_depend>
+  <exec_depend>geometry_msgs</exec_depend>
+  <exec_depend>controller_manager_msgs</exec_depend>
+
+  <exec_depend>sensor_msgs</exec_depend>
+  <exec_depend>nav_msgs</exec_depend>
 
 
   <!-- The export tag contains other, unspecified, tags -->
