tested joint trajectory controller successfully, much more reliable than joint position controller, this might work!

--- a/plen_ros/CMakeLists.txt
+++ b/plen_ros/CMakeLists.txt
@@ -159,6 +159,7 @@ include_directories(
 ## in contrast to setup.py, you can choose the destination
 install(PROGRAMS
   src/joint_test
+  src/joint_trajectory_test
   src/plen_td3
   DESTINATION ${CATKIN_PACKAGE_BIN_DESTINATION}
 )
