added evaluation fcn and tested first policy. reward function needs a lot of work, see Week 5 ppt.

--- a/plen_ros/CMakeLists.txt
+++ b/plen_ros/CMakeLists.txt
@@ -161,6 +161,7 @@ install(PROGRAMS
   src/joint_test
   src/joint_trajectory_test
   src/plen_td3
+  src/walk_eval
   DESTINATION ${CATKIN_PACKAGE_BIN_DESTINATION}
 )
 
