improved fidelity for plen_ros controllers and produced first draft of bullet implementation

--- a/plen_ros/CMakeLists.txt
+++ b/plen_ros/CMakeLists.txt
@@ -162,6 +162,7 @@ install(PROGRAMS
   src/joint_trajectory_test
   src/plen_td3
   src/walk_eval
+  src/gazebo_tools_test
   DESTINATION ${CATKIN_PACKAGE_BIN_DESTINATION}
 )
 
